added blog_links into interactive html

--- a/visualization/generate_scatter_graph.ipynb
+++ b/visualization/generate_scatter_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,8 @@
    "source": [
     "GRAPH_HEIGHT = 1000\n",
     "GRAPH_WIDTH = 800\n",
-    "TOOLS = [WheelZoomTool(), PanTool(), ResetTool(), TapTool()]"
+    "TOOLS = [WheelZoomTool(), PanTool(), ResetTool(), TapTool()]\n",
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'"
    ]
   },
   {
@@ -105,6 +106,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "PATH_TO_DOCUMENT_tsne = './data_for_visual/document_tsne_obj.json'\n",
+    "document_tsne_result = json.loads(codecs.open(PATH_TO_DOCUMENT_tsne, 'r', 'utf-8').read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,46 +126,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# This should be function\n",
-    "XY_list = [member_obj['position_vector'] for member_obj in document_svd_result.values()]\n",
-    "universities = [member_obj['university'] for member_obj in document_svd_result.values()]\n",
-    "major = [member_obj['major'] for member_obj in document_svd_result.values()]\n",
-    "height = [member_obj['height'] for member_obj in document_svd_result.values()]\n",
-    "age = [member_obj['age'] for member_obj in document_svd_result.values()]\n",
-    "X = [xy[0] for xy in XY_list]\n",
-    "Y = [xy[1] for xy in XY_list]\n",
-    "labels = [member_obj['member_name'] for member_obj in document_svd_result.values()]\n",
-    "images = [str(member_obj['photo_url'].replace(u'//img', u'/img')) for member_obj in document_svd_result.values()]\n",
-    "blog_links = [member_obj['blog_url'] for member_obj in document_svd_result.values()]"
+    "def format_item_values(document_svd_result): \n",
+    "\n",
+    "    # This should be function\n",
+    "    XY_list = [member_obj['position_vector'] for member_obj in document_svd_result.values()]\n",
+    "    universities = [member_obj['university'] for member_obj in document_svd_result.values()]\n",
+    "    major = [member_obj['major'] for member_obj in document_svd_result.values()]\n",
+    "    height = [member_obj['height'] for member_obj in document_svd_result.values()]\n",
+    "    age = [member_obj['age'] for member_obj in document_svd_result.values()]\n",
+    "    X = [xy[0] for xy in XY_list]\n",
+    "    Y = [xy[1] for xy in XY_list]\n",
+    "    labels = [member_obj['member_name'] for member_obj in document_svd_result.values()]\n",
+    "    #images = [str(member_obj['photo_url'].replace(u'//img', u'/img')) for member_obj in document_svd_result.values()]\n",
+    "    images = ['{}{}'.format(IMAGE_ROOT_URL, name_rubi) for name_rubi in document_svd_result.keys()]\n",
+    "    blog_links = [member_obj['blog_url'] for member_obj in document_svd_result.values()]\n",
+    "    \n",
+    "    return {\n",
+    "        'X': X,\n",
+    "        'Y': Y,\n",
+    "        'universities': universities,\n",
+    "        'major': major,\n",
+    "        'height': height,\n",
+    "        'age': age,\n",
+    "        'labels': labels,\n",
+    "        'images': images,\n",
+    "        'blog_links': blog_links\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "items_for_graph = format_item_values(document_svd_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "output_file(\"scatter_tooltip.html\")\n",
+    "graph_title_name = 'girls similarity based on document svd'\n",
     "\n",
     "source = ColumnDataSource(\n",
     "        data=dict(\n",
-    "        x=X,\n",
-    "        y=Y,\n",
-    "        desc=labels,\n",
-    "        imgs = images,\n",
-    "        univ=universities,\n",
-    "        major=major,\n",
-    "        height=height,\n",
-    "        age=age,\n",
-    "        blog=blog_links\n",
+    "        x=items_for_graph['X'],\n",
+    "        y=items_for_graph['Y'],\n",
+    "        desc=items_for_graph['labels'],\n",
+    "        imgs = items_for_graph['images'],\n",
+    "        univ = items_for_graph['universities'],\n",
+    "        major = items_for_graph['major'],\n",
+    "        height = items_for_graph['height'],\n",
+    "        age = items_for_graph['age'],\n",
+    "        blog = items_for_graph['blog_links']\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -189,7 +229,7 @@
     "\n",
     "\n",
     "p = figure(plot_width=GRAPH_WIDTH, plot_height=GRAPH_HEIGHT, tools=[hover]+TOOLS,\n",
-    "           title=\"Miss Contest Similarity\")\n",
+    "           title=graph_title_name)\n",
     "\n",
     "p.circle('x', 'y', size=10, source=source)\n",
     "\n",
