added profileURL links in object and graph

--- a/visualization/generate_scatter_graph.ipynb
+++ b/visualization/generate_scatter_graph.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 183,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 186,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 166,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -118,15 +118,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "PATH_TO_PICS_tsne = './data_for_visual/pics_tsne_obj.json'\n",
+    "pics_tsne_result = json.loads(codecs.open(PATH_TO_PICS_tsne, 'r', 'utf-8').read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make objects to be needed to plot"
+    "# Functions to make scatter graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 174,
    "metadata": {
     "collapsed": false
    },
@@ -146,6 +158,7 @@
     "    #images = [str(member_obj['photo_url'].replace(u'//img', u'/img')) for member_obj in document_svd_result.values()]\n",
     "    images = ['{}{}'.format(IMAGE_ROOT_URL, name_rubi) for name_rubi in document_svd_result.keys()]\n",
     "    blog_links = [member_obj['blog_url'] for member_obj in document_svd_result.values()]\n",
+    "    profile_links = [member_obj['profile_url'] for member_obj in document_svd_result.values()]\n",
     "    \n",
     "    return {\n",
     "        'X': X,\n",
@@ -156,47 +169,38 @@
     "        'age': age,\n",
     "        'labels': labels,\n",
     "        'images': images,\n",
-    "        'blog_links': blog_links\n",
+    "        'blog_links': blog_links,\n",
+    "        'profile_links': profile_links\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "items_for_graph = format_item_values(document_svd_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "output_file(\"scatter_tooltip.html\")\n",
-    "graph_title_name = 'girls similarity based on document svd'\n",
+    "def generate_graph(items_for_graph, graph_title_name, graph_html_name):\n",
+    "    output_file(graph_html_name)\n",
     "\n",
-    "source = ColumnDataSource(\n",
-    "        data=dict(\n",
-    "        x=items_for_graph['X'],\n",
-    "        y=items_for_graph['Y'],\n",
-    "        desc=items_for_graph['labels'],\n",
-    "        imgs = items_for_graph['images'],\n",
-    "        univ = items_for_graph['universities'],\n",
-    "        major = items_for_graph['major'],\n",
-    "        height = items_for_graph['height'],\n",
-    "        age = items_for_graph['age'],\n",
-    "        blog = items_for_graph['blog_links']\n",
+    "    source = ColumnDataSource(\n",
+    "            data=dict(\n",
+    "            x=items_for_graph['X'],\n",
+    "            y=items_for_graph['Y'],\n",
+    "            desc=items_for_graph['labels'],\n",
+    "            imgs = items_for_graph['images'],\n",
+    "            univ = items_for_graph['universities'],\n",
+    "            major = items_for_graph['major'],\n",
+    "            height = items_for_graph['height'],\n",
+    "            age = items_for_graph['age'],\n",
+    "            blog = items_for_graph['blog_links'],\n",
+    "            profile= items_for_graph['profile_links'],\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
     "\n",
-    "hover = HoverTool(\n",
+    "    hover = HoverTool(\n",
     "        tooltips=\"\"\"\n",
     "        <div>\n",
     "            <div>\n",
@@ -213,7 +217,8 @@
     "                <span style=\"font-size: 12px; color: #966;\">[$index]</span>\n",
     "            </div>\n",
     "            <div>\n",
-    "                <span style=\"font-size: 13px;\">応援ブログ: <A Href=\"URL\" Target=\"_blank\">@univ</A> </span><br>\n",
+    "                <span style=\"font-size: 13px;\"><A Href=@blog_links Target=\"_blank\">応援ブログ</A> </span><br>\n",
+    "                <span style=\"font-size: 13px;\"><a Href=@profile_links Target=\"_blank\">プロフィールページ</a> </span><br>\n",
     "                <span style=\"font-size: 10px;\">University: @univ</span><br>\n",
     "                <span style=\"font-size: 10px;\">Major: @major</span><br>\n",
     "                <span style=\"font-size: 10px;\">age: @age</span><br>\n",
@@ -225,15 +230,50 @@
     "            </div>\n",
     "        </div>\n",
     "        \"\"\"\n",
-    "    )\n",
+    "        )\n",
     "\n",
     "\n",
-    "p = figure(plot_width=GRAPH_WIDTH, plot_height=GRAPH_HEIGHT, tools=[hover]+TOOLS,\n",
-    "           title=graph_title_name)\n",
+    "    p = figure(plot_width=GRAPH_WIDTH, plot_height=GRAPH_HEIGHT, tools=[hover]+TOOLS,\n",
+    "               title=graph_title_name)\n",
     "\n",
-    "p.circle('x', 'y', size=10, source=source)\n",
+    "    p.circle('x', 'y', size=10, source=source)\n",
     "\n",
-    "show(p)"
+    "    show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generate scatter graph by document and svd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "items_for_graph = format_item_values(document_svd_result)\n",
+    "generate_graph(items_for_graph, \n",
+    "               graph_title_name='girls similarity based on document svd',\n",
+    "               graph_html_name=\"scatter_tooltip.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "items_for_graph_pics_tsne = format_item_values(pics_tsne_result)\n",
+    "generate_graph(items_for_graph_pics_tsne, \n",
+    "               graph_title_name='girls similarity based on pictures tsne', \n",
+    "               graph_html_name=\"pics_tsne_scatter.html\")"
    ]
   },
   {
