added functions to generate openURL and table html pages

--- a/visualization/generate_scatter_graph.ipynb
+++ b/visualization/generate_scatter_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 260,
    "metadata": {
     "collapsed": true
    },
@@ -10,22 +10,22 @@
    "source": [
     "from bokeh.models.tools import (\n",
     "    BoxZoomTool, BoxZoomTool, HelpTool, LassoSelectTool, PanTool,\n",
-    "    PreviewSaveTool, ResetTool, ResizeTool, WheelZoomTool,\n",
-    "    TapTool\n",
+    "    PreviewSaveTool, ResetTool, ResizeTool, WheelZoomTool\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 272,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "GRAPH_HEIGHT = 1000\n",
     "GRAPH_WIDTH = 800\n",
     "TOOLS = [WheelZoomTool(), PanTool(), ResetTool(), TapTool()]\n",
+    "#TOOLS = []\n",
     "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'"
    ]
   },
@@ -38,14 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 273,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "from bokeh.plotting import figure, output_file, show\n",
-    "from bokeh import models"
+    "from bokeh import models\n",
+    "from bokeh.models.widgets import DataTable, DateFormatter, TableColumn"
    ]
   },
   {
@@ -57,14 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 274,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from bokeh.io import output_file, show, vform, vplot\n",
     "from bokeh.plotting import figure, output_file, show, ColumnDataSource\n",
-    "from bokeh.models import HoverTool"
+    "from bokeh.models import HoverTool, OpenURL, TapTool"
    ]
   },
   {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 264,
    "metadata": {
     "collapsed": true
    },
@@ -95,9 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 194,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 195,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 196,
    "metadata": {
     "collapsed": true
    },
@@ -138,9 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 197,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -176,12 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 258,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from bokeh.models import ColumnDataSource, OpenURL, TapTool\n",
+    "from bokeh.plotting import figure, output_file, show\n",
     "def generate_graph(items_for_graph, graph_title_name, graph_html_name):\n",
     "    output_file(graph_html_name)\n",
     "\n",
@@ -199,6 +203,7 @@
     "            profile= items_for_graph['profile_links'],\n",
     "            )\n",
     "        )\n",
+    "    \n",
     "\n",
     "    hover = HoverTool(\n",
     "        tooltips=\"\"\"\n",
@@ -217,8 +222,6 @@
     "                <span style=\"font-size: 12px; color: #966;\">[$index]</span>\n",
     "            </div>\n",
     "            <div>\n",
-    "                <span style=\"font-size: 13px;\"><A Href=@blog_links Target=\"_blank\">応援ブログ</A> </span><br>\n",
-    "                <span style=\"font-size: 13px;\"><a Href=@profile_links Target=\"_blank\">プロフィールページ</a> </span><br>\n",
     "                <span style=\"font-size: 10px;\">University: @univ</span><br>\n",
     "                <span style=\"font-size: 10px;\">Major: @major</span><br>\n",
     "                <span style=\"font-size: 10px;\">age: @age</span><br>\n",
@@ -233,10 +236,24 @@
     "        )\n",
     "\n",
     "\n",
-    "    p = figure(plot_width=GRAPH_WIDTH, plot_height=GRAPH_HEIGHT, tools=[hover]+TOOLS,\n",
+    "    s1 = figure(plot_width=GRAPH_WIDTH, plot_height=GRAPH_HEIGHT, tools=[hover]+TOOLS,\n",
     "               title=graph_title_name)\n",
-    "\n",
-    "    p.circle('x', 'y', size=10, source=source)\n",
+    "    s1.circle('x', 'y', size=10, source=source)\n",
+    "    url = \"@profile\"\n",
+    "    taptool = s1.select(type=TapTool)\n",
+    "    taptool.callback = OpenURL(url=url)\n",
+    "    \n",
+    "    columns = [\n",
+    "        TableColumn(field=\"desc\", title=\"Name\"),\n",
+    "        TableColumn(field=\"univ\", title=\"University\"),\n",
+    "        TableColumn(field=\"major\", title=\"Major\"),\n",
+    "        TableColumn(field=\"age\", title=\"Age\"), \n",
+    "        TableColumn(field=\"height\", title=\"Height\")\n",
+    "    ]\n",
+    "    data_table = DataTable(source=source, columns=columns, width=1000, height=500)\n",
+    "    s2 = vform(data_table)\n",
+    "    \n",
+    "    p = vplot(s1, s2)\n",
     "\n",
     "    show(p)"
    ]
@@ -250,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 265,
    "metadata": {
     "collapsed": false
    },
@@ -259,12 +276,12 @@
     "items_for_graph = format_item_values(document_svd_result)\n",
     "generate_graph(items_for_graph, \n",
     "               graph_title_name='girls similarity based on document svd',\n",
-    "               graph_html_name=\"scatter_tooltip.html\")"
+    "               graph_html_name=\"document_svd_scatter.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
