--- a/visualization/generate_scatter_graph.ipynb
+++ b/visualization/generate_scatter_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 304,
    "metadata": {
     "collapsed": true
    },
@@ -15,61 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "GRAPH_HEIGHT = 1000\n",
-    "GRAPH_WIDTH = 800\n",
-    "TOOLS = [WheelZoomTool(), PanTool(), ResetTool(), TapTool()]\n",
-    "#TOOLS = []\n",
-    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import bokeh libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import figure, output_file, show\n",
-    "from bokeh import models\n",
-    "from bokeh.models.widgets import DataTable, DateFormatter, TableColumn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import bokeh, sub modules for making scallter graph with tooltip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.io import output_file, show, vform, vplot\n",
-    "from bokeh.plotting import figure, output_file, show, ColumnDataSource\n",
-    "from bokeh.models import HoverTool, OpenURL, TapTool"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 280,
    "metadata": {
     "collapsed": true
    },
@@ -92,43 +37,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# load dataset to plot"
+    "## Miss data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 285,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "PATH_TO_DOCUMENT_SVD = './data_for_visual/document_svd_obj.json'\n",
-    "document_svd_result = json.loads(codecs.open(PATH_TO_DOCUMENT_SVD, 'r', 'utf-8').read())"
+    "MISS_PATH_TO_DOCUMENT_SVD = './data_for_visual/miss_document_svd_obj.json'\n",
+    "miss_document_svd_result = json.loads(codecs.open(MISS_PATH_TO_DOCUMENT_SVD, 'r', 'utf-8').read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 286,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "PATH_TO_DOCUMENT_tsne = './data_for_visual/document_tsne_obj.json'\n",
-    "document_tsne_result = json.loads(codecs.open(PATH_TO_DOCUMENT_tsne, 'r', 'utf-8').read())"
+    "MISS_PATH_TO_DOCUMENT_tsne = './data_for_visual/miss_document_tsne_obj.json'\n",
+    "miss_document_tsne_result = json.loads(codecs.open(MISS_PATH_TO_DOCUMENT_tsne, 'r', 'utf-8').read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 287,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "PATH_TO_PICS_tsne = './data_for_visual/pics_tsne_obj.json'\n",
-    "pics_tsne_result = json.loads(codecs.open(PATH_TO_PICS_tsne, 'r', 'utf-8').read())"
+    "MISS_PATH_TO_PICS_tsne = './data_for_visual/miss_pics_tsne_obj.json'\n",
+    "miss_pics_tsne_result = json.loads(codecs.open(MISS_PATH_TO_PICS_tsne, 'r', 'utf-8').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MR_PATH_TO_DOCUMENT_SVD = './data_for_visual/mr_document_svd_obj.json'\n",
+    "mr_document_svd_result = json.loads(codecs.open(MR_PATH_TO_DOCUMENT_SVD, 'r', 'utf-8').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MR_PATH_TO_DOCUMENT_tsne = './data_for_visual/mr_document_tsne_obj.json'\n",
+    "mr_document_tsne_result = json.loads(codecs.open(MR_PATH_TO_DOCUMENT_tsne, 'r', 'utf-8').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MR_PATH_TO_PICS_tsne = './data_for_visual/mr_pics_tsne_obj.json'\n",
+    "mr_pics_tsne_result = json.loads(codecs.open(MR_PATH_TO_PICS_tsne, 'r', 'utf-8').read())"
    ]
   },
   {
@@ -140,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 317,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def format_item_values(document_svd_result): \n",
+    "def format_item_values(document_svd_result, image_root_url):\n",
     "\n",
     "    # This should be function\n",
     "    XY_list = [member_obj['position_vector'] for member_obj in document_svd_result.values()]\n",
@@ -158,7 +146,7 @@
     "    Y = [xy[1] for xy in XY_list]\n",
     "    labels = [member_obj['member_name'] for member_obj in document_svd_result.values()]\n",
     "    #images = [str(member_obj['photo_url'].replace(u'//img', u'/img')) for member_obj in document_svd_result.values()]\n",
-    "    images = ['{}{}'.format(IMAGE_ROOT_URL, name_rubi) for name_rubi in document_svd_result.keys()]\n",
+    "    images = ['{}{}'.format(image_root_url, name_rubi) for name_rubi in document_svd_result.keys()]\n",
     "    blog_links = [member_obj['blog_url'] for member_obj in document_svd_result.values()]\n",
     "    profile_links = [member_obj['profile_url'] for member_obj in document_svd_result.values()]\n",
     "    \n",
@@ -178,16 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 318,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from bokeh.models import ColumnDataSource, OpenURL, TapTool\n",
-    "from bokeh.plotting import figure, output_file, show\n",
     "def generate_graph(items_for_graph, graph_title_name, graph_html_name):\n",
+    "    # \n",
+    "    from bokeh.io import output_file, show, vform, vplot\n",
+    "    from bokeh.plotting import figure, output_file, show, ColumnDataSource\n",
+    "    from bokeh.models import HoverTool, OpenURL, TapTool    \n",
+    "    # Import bokeh, sub modules for making scallter graph with tooltip\n",
+    "    from bokeh.models.widgets import DataTable, DateFormatter, TableColumn    \n",
+    "    from bokeh.models import ColumnDataSource, OpenURL, TapTool\n",
+    "    from bokeh.plotting import figure, output_file, show    \n",
+    "    \n",
     "    output_file(graph_html_name)\n",
+    "    GRAPH_HEIGHT = 1000\n",
+    "    GRAPH_WIDTH = 800\n",
+    "    TOOLS = [WheelZoomTool(), PanTool(), ResetTool(), TapTool()]\n",
+    "    #TOOLS = []\n",
     "\n",
     "    source = ColumnDataSource(\n",
     "            data=dict(\n",
@@ -266,41 +265,78 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "items_for_graph = format_item_values(document_svd_result)\n",
-    "generate_graph(items_for_graph, \n",
-    "               graph_title_name='girls similarity based on document svd',\n",
-    "               graph_html_name=\"document_svd_scatter.html\")"
+    "## make girls' scatter graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "items_for_graph_pics_tsne = format_item_values(pics_tsne_result)\n",
-    "generate_graph(items_for_graph_pics_tsne, \n",
-    "               graph_title_name='girls similarity based on pictures tsne', \n",
-    "               graph_html_name=\"pics_tsne_scatter.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "items_for_graph = format_item_values(miss_document_svd_result, image_root_url = IMAGE_ROOT_URL)\n",
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'\n",
+    "generate_graph(items_for_graph, \n",
+    "               graph_title_name='girls similarity based on document svd',\n",
+    "               graph_html_name=\"girls_document_svd_scatter.html\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'\n",
+    "items_for_graph_pics_tsne = format_item_values(miss_pics_tsne_result, image_root_url = IMAGE_ROOT_URL)\n",
+    "generate_graph(items_for_graph_pics_tsne, \n",
+    "               graph_title_name='girls similarity based on pictures tsne', \n",
+    "               graph_html_name=\"girls_pics_tsne_scatter.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## make boys' scatter graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "items_for_graph = format_item_values(mr_document_svd_result, image_root_url = IMAGE_ROOT_URL)\n",
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/mr_pictures/'\n",
+    "generate_graph(items_for_graph, \n",
+    "               graph_title_name='boys similarity based on document svd',\n",
+    "               graph_html_name=\"boys_document_svd_scatter.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/mr_pictures/'\n",
+    "items_for_graph_pics_tsne = format_item_values(mr_pics_tsne_result, image_root_url = IMAGE_ROOT_URL)\n",
+    "generate_graph(items_for_graph_pics_tsne, \n",
+    "               graph_title_name='boys similarity based on pictures tsne', \n",
+    "               graph_html_name=\"boys_pics_tsne_scatter.html\")"
+   ]
   }
  ],
  "metadata": {
