added functions to make dimension reduction with deepNN

--- a/visualization/generate_scatter_graph.ipynb
+++ b/visualization/generate_scatter_graph.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kensuke-mi/.pyenv/versions/anaconda-2.1.0/lib/python2.7/site-packages/numexpr/cpuinfo.py:71: UserWarning: [Errno 2] No such file or directory\n",
+      "  stacklevel=stacklevel+1):\n"
+     ]
+    }
+   ],
    "source": [
     "from bokeh.models.tools import (\n",
     "    BoxZoomTool, BoxZoomTool, HelpTool, LassoSelectTool, PanTool,\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,6 +83,18 @@
    "source": [
     "MISS_PATH_TO_PICS_tsne = './data_for_visual/miss_pics_tsne_obj.json'\n",
     "miss_pics_tsne_result = json.loads(codecs.open(MISS_PATH_TO_PICS_tsne, 'r', 'utf-8').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "MISS_PATH_TO_DEEPNN_tsne = './data_for_visual/miss_pics_deepNN_obj.json'\n",
+    "miss_deepNN_tsne_result = json.loads(codecs.open(MISS_PATH_TO_DEEPNN_tsne, 'r', 'utf-8').read())"
    ]
   },
   {
@@ -128,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -299,6 +320,164 @@
     "generate_graph(items_for_graph_pics_tsne, \n",
     "               graph_title_name='girls similarity based on pictures tsne', \n",
     "               graph_html_name=\"girls_pics_tsne_scatter.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'Ouchi Kasumi',\n",
+       " u'Itatani Akiho',\n",
+       " u'Furusawa Emu',\n",
+       " u'Onoue Shuka',\n",
+       " u'Morikawa Fumika',\n",
+       " u'Sugawara Saori',\n",
+       " u'Wada Mizuki',\n",
+       " u'Kojima Momoko',\n",
+       " u'Shoji Shiori',\n",
+       " u'Homma Shoko',\n",
+       " u'Nishida Norie',\n",
+       " u'Kuramochi Aya',\n",
+       " u'Kijima Arisa',\n",
+       " u'Kusakabe Yae',\n",
+       " u'Hisadome Suzuna',\n",
+       " u'Yamamoto Shiori',\n",
+       " u'Mitsushima Haruka',\n",
+       " u'Kitamura Lisa',\n",
+       " u'Tomita Mao',\n",
+       " u'Kokubo Yuka',\n",
+       " u'Taki Nanako',\n",
+       " u'Fujita Asuka',\n",
+       " u'Okuda Sato',\n",
+       " u'Ueda Riyo',\n",
+       " u'Fukasawa Saki',\n",
+       " u'Fukui Serina',\n",
+       " u'Tasaka Mayumi',\n",
+       " u'Morita Marika',\n",
+       " u'Takase Ayu',\n",
+       " u'Naoi Momoka',\n",
+       " u'Eguchi Saki',\n",
+       " u'Matsumoto Manae',\n",
+       " u'Kakinuma Honoka',\n",
+       " u'Shimaoka Aya',\n",
+       " u'Tonokawa Fumiko',\n",
+       " u'Ojima Hiyori',\n",
+       " u'Ono Haruka',\n",
+       " u'Seya Hikaru',\n",
+       " u'Sakai Runa',\n",
+       " u'Takahashi Yuki',\n",
+       " u'Kurihara Saki',\n",
+       " u'Nishi Maika',\n",
+       " u'Iwasawa Yurika',\n",
+       " u'Adachi Mako',\n",
+       " u'Kurimura Mayu',\n",
+       " u'Suzuki Yume',\n",
+       " u'Okuno Saori',\n",
+       " u'Fujita Ayano',\n",
+       " u'Inamura Naho',\n",
+       " u'Goto Shinju',\n",
+       " u'Inoue Seika',\n",
+       " u'Miki Erika',\n",
+       " u'Tomita Mami',\n",
+       " u'Tomita Ayane',\n",
+       " u'Isibashi Risa',\n",
+       " u'Tutumi Kanae',\n",
+       " u'Ishiguro Kanako',\n",
+       " u'Suehara Rei',\n",
+       " u'Inagaki Kaori',\n",
+       " u'Suzuki Haruka',\n",
+       " u'Takazato Erina',\n",
+       " u'Nishimori Kozue',\n",
+       " u'Igata Mikako',\n",
+       " u'Ueta Hikari',\n",
+       " u'Kuriyama Tomoko',\n",
+       " u'Hayashi Nanaka',\n",
+       " u'Uehara Rika',\n",
+       " u'Hirahara Akiho',\n",
+       " u'Ina Erika',\n",
+       " u'Okada Arisa',\n",
+       " u'Sato Minami',\n",
+       " u'Torigoe Kana',\n",
+       " u'Haginaka Wako',\n",
+       " u'Chiwaki Nako',\n",
+       " u'Yamaga Kotoko',\n",
+       " u'Kaku Ayaka',\n",
+       " u'Sawaki Sumire',\n",
+       " u'Yoshida Hiroko',\n",
+       " u'Naruta Chiho',\n",
+       " u'Fukunaga Yuri',\n",
+       " u'Hiraki Eru',\n",
+       " u'Kioka Marina',\n",
+       " u'Okumura Misaki',\n",
+       " u'Otani Mizuki',\n",
+       " u'Igarashi Yuri',\n",
+       " u'Wada Ayaka',\n",
+       " u'Maeda Yuuyu',\n",
+       " u'Shibata Konomi',\n",
+       " u'Nishiguchi Mao',\n",
+       " u'Hirai Anna',\n",
+       " u'Ro Ami',\n",
+       " u'Uematsu Arisa',\n",
+       " u'Araki Marina',\n",
+       " u'Shiratori Yurina',\n",
+       " u'Kimimura Makiko',\n",
+       " u'Kitazawa Naho',\n",
+       " u'Mikage Una',\n",
+       " u'Nishida Rina',\n",
+       " u'Taga Kaori',\n",
+       " u'Matsufuji Yurika',\n",
+       " u'Yamamoto Marina',\n",
+       " u'Yasui Wakana',\n",
+       " u'Tsujisawa Kanae',\n",
+       " u'Shimizu Miyu',\n",
+       " u'Ishida Shizuka',\n",
+       " u'Shimizu Yumi',\n",
+       " u'Fuji Ayaka',\n",
+       " u'Nidaira Tamao',\n",
+       " u'Nakamura Akari',\n",
+       " u'Noumi Erina',\n",
+       " u'Takagi Mariko',\n",
+       " u'Okabe Emi',\n",
+       " u'Tachibana Yuri',\n",
+       " u'Takiguchi Mayu',\n",
+       " u'Nakahigashi Saki',\n",
+       " u'Tokida Kana',\n",
+       " u'Koizumi Yuuna',\n",
+       " u'Hosokawa Shiori',\n",
+       " u'Amano Nanami',\n",
+       " u'Asanuma Eri',\n",
+       " u'Uehara Riyuki',\n",
+       " u'Kimura Kana',\n",
+       " u'Hiramoto Sayaka',\n",
+       " u'Hataguchi Mio',\n",
+       " u'Matsushita Ruka',\n",
+       " u'Okabe Mayu',\n",
+       " u'Takahashi Mari',\n",
+       " u'Shizukawa Haruna',\n",
+       " u'Urushibata Eri',\n",
+       " u'Iida Serina',\n",
+       " u'Ito Nagisa',\n",
+       " u'Miyazaki Rei']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IMAGE_ROOT_URL = 'http://kensuke-mi.pussycat.jp/univ_contest_project_pics/miss_pictures/'\n",
+    "items_for_graph_pics_deepNN = format_item_values(miss_deepNN_tsne_result, image_root_url = IMAGE_ROOT_URL)\n",
+    "items_for_graph_pics_deepNN['profile_links']\n",
+    "#generate_graph(items_for_graph_pics_deepNN, \n",
+    "#               graph_title_name='girls similarity based on pictures deepNN', \n",
+    "#               graph_html_name=\"girls_pics_deepNN_scatter.html\")"
    ]
   },
   {
